--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,5 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#00b2b3",
-    "theme_color": "#00b2b3"
+    "theme_color": "#017a69"
 }
